--- a/CustomRPC/About.pt.resx
+++ b/CustomRPC/About.pt.resx
@@ -128,6 +128,6 @@
     <value>Fechar</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Acerca</value>
+    <value>Sobre</value>
   </data>
 </root>
