--- a/CustomRPC/MainForm.zh-Hant.resx
+++ b/CustomRPC/MainForm.zh-Hant.resx
@@ -317,4 +317,7 @@
   <data name="faqToolStripMenuItem.Text" xml:space="preserve">
     <value>常見問題與解答</value>
   </data>
+  <data name="newPresetToolStripMenuItem.Text" xml:space="preserve">
+    <value>新预设</value>
+  </data>
 </root>
