--- a/CustomRPC/MainForm.th.resx
+++ b/CustomRPC/MainForm.th.resx
@@ -441,4 +441,7 @@
   <data name="faqToolStripMenuItem.Text" xml:space="preserve">
     <value>คำถามที่พบบ่อย</value>
   </data>
+  <data name="newPresetToolStripMenuItem.Text" xml:space="preserve">
+    <value>พรีเซตใหม่</value>
+  </data>
 </root>
