--- a/CustomRPC/MainForm.th.resx
+++ b/CustomRPC/MainForm.th.resx
@@ -442,6 +442,6 @@
     <value>คำถามที่พบบ่อย</value>
   </data>
   <data name="newPresetToolStripMenuItem.Text" xml:space="preserve">
-    <value>พรีเซตใหม่</value>
+    <value>พรีเซ็ตใหม่</value>
   </data>
 </root>
