--- a/CustomRPC/MainForm.fil.resx
+++ b/CustomRPC/MainForm.fil.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="trayIcon.BalloonTipText" xml:space="preserve">
-    <value>I click ng dalawang beses ang icon para lumabas ulit, o i-right click para mag quit.</value>
+    <value>I-click ng dalawang beses ang icon para lumabas ito ulit, o i-right click para tumigil.</value>
   </data>
   <data name="trayIcon.BalloonTipTitle" xml:space="preserve">
-    <value>Tatakbo ang app sa likod ng ibang mga aplikasyon.</value>
+    <value>Pag-patakbo ang app sa likod ng ibang mga aplikasyon.</value>
   </data>
   <data name="openToolStripMenuItem.Text" xml:space="preserve">
     <value>Buksan</value>
@@ -179,7 +179,7 @@
     <value>197, 22</value>
   </data>
   <data name="startMinimizedToolStripMenuItem.Text" xml:space="preserve">
-    <value>Simulan ng naka-minimise</value>
+    <value>Simulan ng naka-tago</value>
   </data>
   <data name="autoconnectToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>197, 22</value>
@@ -227,7 +227,7 @@
     <value>228, 22</value>
   </data>
   <data name="openTheManualToolStripMenuItem.Text" xml:space="preserve">
-    <value>Buksan ang Manual</value>
+    <value>Buksan ang Manwal</value>
   </data>
   <data name="gitHubPageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>228, 22</value>
@@ -278,7 +278,7 @@
     <value>141, 24</value>
   </data>
   <data name="buttonUpdatePresence.Text" xml:space="preserve">
-    <value>I-Update ang Presence</value>
+    <value>I-Update ang Presensya</value>
   </data>
   <data name="buttonUpdatePresence.ToolTip" xml:space="preserve">
     <value>Ina-update ang presence.</value>
@@ -290,7 +290,7 @@
     <value>Kumonekta</value>
   </data>
   <data name="buttonConnect.ToolTip" xml:space="preserve">
-    <value>Links ng application na iniligay na ID para sa presence.</value>
+    <value>Links ng aplikasyon na iniligay na ID para sa presensya.</value>
   </data>
   <data name="buttonDisconnect.Location" type="System.Drawing.Point, System.Drawing">
     <value>333, 50</value>
@@ -308,19 +308,19 @@
     <value>ID ng aplikasyon mula sa Discord Developers site.</value>
   </data>
   <data name="labelDetails.ToolTip" xml:space="preserve">
-    <value>Unang linya sa presence.</value>
+    <value>Unang linya sa presensya.</value>
   </data>
   <data name="labelState.ToolTip" xml:space="preserve">
-    <value>Pangalawang linya sa presence.</value>
+    <value>Pangalawang linya sa presensya.</value>
   </data>
   <data name="labelSmallKey.ToolTip" xml:space="preserve">
     <value>Pangalan ng asset para sa maliit na larawan o isang URL ng larawan.</value>
   </data>
   <data name="labelSmallText.ToolTip" xml:space="preserve">
-    <value>Teksto na pinapakita kung nag-hover sa maliit na larawan.</value>
+    <value>Teksto na pinapakita kung nagumali-aligid sa maliit na larawan.</value>
   </data>
   <data name="labelLargeText.ToolTip" xml:space="preserve">
-    <value>Teksto na pinapakita kung nag-hover sa malaking larawan.</value>
+    <value>Teksto na pinapakita kung nagumali-aligid sa malaking larawan.</value>
   </data>
   <data name="labelLargeKey.ToolTip" xml:space="preserve">
     <value>Pangalan ng asset para sa malaking larawan or isang URL ng larawan.</value>
@@ -329,7 +329,7 @@
     <value>95, 14</value>
   </data>
   <data name="labelSmall.Text" xml:space="preserve">
-    <value>Maliit na larawan</value>
+    <value>Maliit na imahe</value>
   </data>
   <data name="labelSmall.ToolTip" xml:space="preserve">
     <value>Larawan na nag-papakita sa kanang ibaba na sulok ng malaking imahe.</value>
@@ -356,10 +356,10 @@
     <value>223, 18</value>
   </data>
   <data name="radioButtonStartTime.Text" xml:space="preserve">
-    <value>Mula noong sinimulan ang CustomRP</value>
+    <value>Mula noong nagsimula ang CustomRP</value>
   </data>
   <data name="radioButtonStartTime.ToolTip" xml:space="preserve">
-    <value>Pinapakita ang oras mula nong sinimulan ang aplikasyon.</value>
+    <value>Pinapakita ang oras mula noong nagsimula ang aplikasyon.</value>
   </data>
   <data name="radioButtonLocalTime.Size" type="System.Drawing.Size, System.Drawing">
     <value>126, 18</value>
@@ -391,7 +391,7 @@ Upang bumisa, ang parehong field ay dapat na higit sa 0.</value>
     <value>66, 14</value>
   </data>
   <data name="labelButton1.Text" xml:space="preserve">
-    <value>Pindotan 1</value>
+    <value>Buton 1</value>
   </data>
   <data name="labelButton1.ToolTip" xml:space="preserve">
     <value>Ang una sa dalawang pindotan ang nagpapakita sa ilalim ng status mo sa profile popup at sa kanan ng buong profile.</value>
@@ -400,7 +400,7 @@ Upang bumisa, ang parehong field ay dapat na higit sa 0.</value>
     <value>66, 14</value>
   </data>
   <data name="labelButton2.Text" xml:space="preserve">
-    <value>Pindotan 2</value>
+    <value>Buton 2</value>
   </data>
   <data name="labelButton2.ToolTip" xml:space="preserve">
     <value>Pangalawang button, na lumalabas sa ilalim ng unang button, or papaltan kung hindi nakatakda ang una.</value>
@@ -412,10 +412,10 @@ Upang bumisa, ang parehong field ay dapat na higit sa 0.</value>
     <value>URL na pupuntahan ng user pag-click ng button.</value>
   </data>
   <data name="labelButton1Text.ToolTip" xml:space="preserve">
-    <value>Label ng unang button.</value>
+    <value>Label ng unang buton.</value>
   </data>
   <data name="labelButton2Text.ToolTip" xml:space="preserve">
-    <value>Label ng pangalawang button.</value>
+    <value>Label ng pangalawang buton.</value>
   </data>
   <data name="radioButtonPresence.Size" type="System.Drawing.Size, System.Drawing">
     <value>194, 18</value>
@@ -440,5 +440,11 @@ Upang bumisa, ang parehong field ay dapat na higit sa 0.</value>
   </data>
   <data name="darkModeToolStripMenuItem.Text" xml:space="preserve">
     <value>Dark Mode</value>
+  </data>
+  <data name="faqToolStripMenuItem.Text" xml:space="preserve">
+    <value>madalas itinanong na mga tanong</value>
+  </data>
+  <data name="newPresetToolStripMenuItem.Text" xml:space="preserve">
+    <value>Bagong preset</value>
   </data>
 </root>
