--- a/CustomRPC/Strings.uk.resx
+++ b/CustomRPC/Strings.uk.resx
@@ -131,8 +131,8 @@
     <value>Потрібна допомога?</value>
   </data>
   <data name="firstTimeRunText" xml:space="preserve">
-    <value>Хочете відкрити мануал?
-Ви можете його відкрити натиснувши Допомога -&gt; Відкрити мануал або натиснувши F1.</value>
+    <value>Хочете відкрити порадник?
+Ви можете його відкрити натиснувши Допомога -&gt; Відкрити порадник або натиснувши F1.</value>
   </data>
   <data name="information" xml:space="preserve">
     <value>Інформація</value>
@@ -153,7 +153,7 @@
     <value>Помилка підключення (Неправильний ID?)</value>
   </data>
   <data name="errorInvalidURL" xml:space="preserve">
-    <value>Неправильний URL для кнопок або текст задовгий!</value>
+    <value>Неправильний URL для кнопки(ок) або текст задовгий!</value>
   </data>
   <data name="errorNoInternet" xml:space="preserve">
     <value>Неможливо під'єднатись до інтернету!</value>
@@ -189,5 +189,9 @@
   </data>
   <data name="statusUpdatingPresence" xml:space="preserve">
     <value>Оновлення статусу...</value>
+  </data>
+  <data name="newPresetConfirmation" xml:space="preserve">
+    <value>Ви хочете почати все з нуля?
+Ваші дані вже не будуть повернені.</value>
   </data>
 </root>
