Updated de-ch, lt

--- a/CustomRPC/About.de-CH.resx
+++ b/CustomRPC/About.de-CH.resx
@@ -125,7 +125,7 @@
     <value>Gmacht vo: maximmax42</value>
   </data>
   <data name="buttonClose.Text" xml:space="preserve">
-    <value>Zuämachä</value>
+    <value>Schlüssä</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Über</value>
