--- a/CustomRPC/MainForm.zh-Hant.resx
+++ b/CustomRPC/MainForm.zh-Hant.resx
@@ -318,6 +318,6 @@
     <value>常見問題與解答</value>
   </data>
   <data name="newPresetToolStripMenuItem.Text" xml:space="preserve">
-    <value>新预设</value>
+    <value>新增 預設設定</value>
   </data>
 </root>
